--- a/DMOAuto/DMOAuto.csproj
+++ b/DMOAuto/DMOAuto.csproj
@@ -56,6 +56,9 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SharpDX, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpDX.4.2.0\lib\net45\SharpDX.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -77,8 +80,11 @@
     </Compile>
     <Compile Include="lib\Boting.cs" />
     <Compile Include="lib\Consts.cs" />
+    <Compile Include="lib\ImgTool.cs" />
     <Compile Include="lib\ProcessHandler.cs" />
+    <Compile Include="lib\Win32Api.cs" />
     <Compile Include="model\MyConfig.cs" />
+    <Compile Include="model\Rect.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -93,6 +99,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
